# odoo---SmartShelf-AI

./: .gitignore  Cargo.toml  EXPLICACION.md  README.md
odoo_addon/: __manifest__.py
odoo_addon/models/: partner.py
src/: main.rs  odoo_client.rs  shelf_tracker.rs
